<resources>
    <string name="app_name">ESportsMobile</string>
    <string name="welcome_message">Welcome to our App!\n Come to join yourself on E-Sports World with Us</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="country">Country</string>
    <string name="terms_conditions">I agree with all the therms and conditions of this app</string>
    <string name="google_account">Or log in with your Google Account:</string>
    <string name="keep_connection">Keep me connected</string>
    <string name="championship">Championship</string>
    <string name="championships">championships</string>
    <string name="welcome_my_lord">Welcome my Lord!</string>
    <string name="logotype">logotype</string>
    <string name="cblol">CBLOL</string>
    <string name="change_account">Change Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="local_brazil">Local: Brazil</string>
    <string name="brazil">Brazil</string>
    <string name="eua">EUA</string>
    <string name="usa">USA</string>
    <string name="europe">Europe</string>
    <string name="help">Help</string>
    <string name="favorites">Favorites</string>
    <string name="local">Local:</string>
    <string name="account">Account</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="profile_picture">Profile picture</string>
    <string name="user_name">Abedojão</string>
    <string name="user_email_example">rodrigueshugoab2@gmail.com</string>
    <string name="menu_icon">menu icon</string>
    <string name="league">league</string>
    <string name="team">Team</string>
    <string name="region">Region</string>
    <string name="split2_2022">Split2 2022</string>
    <string name="season">Season</string>
    <string name="average_game_time">Average Game Time</string>
    <string name="shortest_game_time">Shortest Game Time</string>
    <string name="longest_game_time">Longest Game Time</string>
    <string name="_22_51">22:51</string>
    <string name="_47_41">47:41</string>
    <string name="_32_52">32:52</string>
    <string name="average_game_kills">Average Game Kills</string>
    <string name="_26">26</string>
    <string name="win_rate">Win Rate</string>
    <string name="average_game_deaths">Average Game Deaths</string>
    <string name="_12_18">12/18</string>
    <string name="_16_7">16.7</string>
    <string name="_11_4">11.4</string>
    <string name="_33_17">33:17</string>
    <string name="loud">Loud</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="user_id">user ID</string>
    <string name="back_menu">back menu</string>
    <string name="user_image">user image</string>

</resources>