<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LeagueDataFragment"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/league_logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/league_logo_cblol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/league"/>

    <TextView
        android:id="@+id/league_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/cblol"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dataLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/league_logo"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/league_logo">

        <TextView
            android:id="@+id/regionTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/region"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/seasonTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/season"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/shortestGameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/shortest_game_time"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/averageGameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/average_game_time"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/averageGameKillTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/longest_game_time"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/averageKillTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/average_game_kills"
            android:textSize="23sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dataLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@id/league_logo">

        <TextView
            android:id="@+id/region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/brazil"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/season"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/split2_2022"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/shortestGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/_22_51"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/averageGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/_32_52"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/longestGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/_47_41"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/averageKill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/_26"
            android:textSize="23sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>