<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeamActivity"
    android:background="@drawable/gradient_background">

    <ImageView
        android:layout_marginTop="50dp"
        android:id="@+id/team_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:padding="10dp"
        android:contentDescription="@string/team"
        android:src="@drawable/team_logo_loud"
        android:background="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/loud"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/team_logo"/>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/team_name">

        <TextView
            android:id="@+id/regionTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/region"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/winRateTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/win_rate"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/averageKillTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/average_game_kills"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/averageGameDeathTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/average_game_deaths"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/averageGameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/average_game_time"
            android:textSize="23sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/dataLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@id/team_name">

        <TextView
            android:id="@+id/region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/brazil"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/winRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/_12_18"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/averageGameKills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/_16_7"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/averageGameDeath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/_11_4"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/averageGameTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/_33_17"
            android:textSize="23sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>