<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/gradient_background">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/user_profile"
            android:src="@drawable/profile"
            android:scaleType="fitXY"
            android:contentDescription="@string/profile_picture"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        android:text="@string/user_name"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/user_email_example"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>