<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:flow_verticalBias="0.30"
    tools:context=".SingUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/singup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="32dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameTxt"
                android:background="@drawable/bg_edittext"
                android:layout_marginVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:maxWidth="200dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/age"
                    android:textColorHint="@color/white"
                    android:inputType="numberDecimal"
                    android:maxLength="2"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/countryTxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edittext"
                    android:layout_marginStart="10dp"
                    android:inputType="text"
                    android:maxLength="15"
                    android:hint="@string/country"
                    android:textColorHint="@color/white"/>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailTxt"
                android:background="@drawable/bg_edittext"
                android:layout_marginVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxWidth="200dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordTxt"
                android:background="@drawable/bg_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxWidth="200dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white" />

            <CheckBox
                android:id="@+id/therms_conditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/terms_conditions"
                android:checked="true"
                android:layout_marginTop="8dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="32dp"
            app:layout_constraintTop_toBottomOf="@id/singup_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
                <Button
                    android:id="@+id/singup_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:background="@drawable/bg_button"/>

                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google_account"
                    android:textColor="@color/black"
                    />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="100dp"
                    android:layout_margin="10dp">
                    <ImageButton
                        android:id="@+id/google_button"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/google_icon"
                        android:background="@color/white"
                        android:contentDescription="google_logo"/>
                </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>