<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SingInFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/singin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="32dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTxt"
            android:background="@drawable/bg_edittext"
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxWidth="200dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTxt"
            android:background="@drawable/bg_edittext"
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxWidth="200dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/keep_connection"
            android:checked="true"
            android:layout_marginTop="8dp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:padding="32dp"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:layout_marginTop="250dp"
            android:id="@+id/singin_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:background="@drawable/bg_button" />

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_account"
            android:textColor="@color/black"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="100dp"
            android:layout_margin="10dp">
            <ImageButton
                android:id="@+id/google_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/google_icon"
                android:background="@color/white"
                android:contentDescription="google_logo"/>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

